force-app/main/default/objects/FEC_Stage_History__c/FEC_Stage_History__c.object-meta.xml
<CustomObject>
    <description>Stage History - tracks stage transitions for Cases, used for Revert logic and audit trail</description>
    <label>FEC Stage History</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FEC Stage Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>