force-app/main/default/objects/FEC_Stage_History__c/fields/FEC_Action_Button__c.field-meta.xml
<CustomField>
    <fullName>FEC_Action_Button__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Button</label>
    <referenceTo>FEC_Action_Button__c</referenceTo>
    <relationshipLabel>Stage Histories</relationshipLabel>
    <relationshipName>Stage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>