force-app/main/default/objects/FEC_Stage_History__c/fields/FEC_From_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_From_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>Stage Histories (From Stage)</relationshipLabel>
    <relationshipName>From_Stage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>