force-app/main/default/objects/FEC_Stage_History__c/fields/FEC_Performed_By__c.field-meta.xml
<CustomField>
    <fullName>FEC_Performed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Stage Histories</relationshipLabel>
    <relationshipName>Stage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>