force-app/main/default/objects/FEC_Stage_History__c/fields/FEC_Queue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Queue__c</fullName>
    <label>Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>