force-app/main/default/objects/FEC_Stage_History__c/fields/FEC_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>FEC_Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>