force-app/main/default/objects/FEC_Stage_History__c/fields/FEC_To_Stage__c.field-meta.xml
<CustomField>
    <fullName>FEC_To_Stage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Stage</label>
    <referenceTo>FEC_Case_Stage__c</referenceTo>
    <relationshipLabel>Stage Histories (To Stage)</relationshipLabel>
    <relationshipName>To_Stage_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>